docx: Automatic numbering support.

* Using the combination of text:continue-numbering and text:start-value, which is fine for
  simple docx files.  To support interferrence of numbered list at the same level with
  separate numbering the text:continue-list support is required.

* Stopped using the KoGenStyles::AllowDuplicates parameter when inserting a list style into
  the styles collection.

* Added support for the w:lvlOverride element.

TODO: Numbered lists inside tables.  In MSWord, the automatic numbering is applied in a
table column.  Each column has a separate numbered lists.  The filter is OK, waiting the
layout part to test.

BUG:285303